--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,6 @@ services:
     core_api:
         build: .
         container_name: 'to_do_list'
-        ports:
-            - "8010:15400"
         volumes:
             - ./app/:/app
+        network_mode: host
